--- a/src/chp02/index.html
+++ b/src/chp02/index.html
@@ -8,7 +8,7 @@
   <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
 </head>
 <body>
-  <h1>인공지능 소프트웨어과 웹프로그램이 활용</h1>
+<h1>인공지능 소프트웨어과 웹프로그래밍 활용</h1>
 <div id="root"></div>
 <script src="MyButton.js"></script>
 </body>
